src/components/collapsible-section/collapsible-section.scss
@import '../../style/variables';

:host {
    display: block;
}

:host([hidden]) {
    display: none;
}

:host([disabled]) {
    pointer-events: none;
}

section {
    background-color: #ffffff;

    > header {
        align-items: center;
        background-color: #ffffff;
        cursor: pointer;
        display: flex;
        padding-left: pxToRem(10);

        > .expander {
            color: #a6a6a6;
            height: pxToRem(30);
            margin-right: pxToRem(5);
            width: pxToRem(30);

            > svg {
                fill: currentColor;
            }
        }

        &:hover {
            background-color: #f8f8f8;

            > .expander {
                color: #636363;
            }
        }
    }

    > .body {
        display: none;
    }

    &.open {
        > header {
            background-color: #f8f8f8;
        }

        > .body {
            display: block;
        }
    }
}

